--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,88 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	padding: 0;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.navbar,
+.navbar {
+	display: flex;
+	background-color: #252527;
+	color: white;
+	justify-content: space-around;
+	align-items: center;
+	height: 80px;
+	font-size: 21px;
+}
+
+.navbar ul {
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+}
+
+.navbar ul li {
+	display: inline;
+	margin-right: 30px;
+}
+
+.navbar ul li a {
+	text-decoration: none;
+}
+
+.navbar a:hover {
+	color: antiquewhite;
+}
+
+.navbar ul :nth-child(1) {
+	margin-left: 30px;
+}
+.navbar .toggleBtn {
+	display: none;
+}
+@media (max-width: 900px) {
+	.navbar ul,
+	.navbar .contactBtn {
+		display: none;
+	}
+	.navbar.active {
+		height: 100vh;
+		width: 100vw;
+		background-color: blue;
+		position: fixed;
+	}
+	.navbar.active ul {
+		display: flex;
+		flex-flow: column;
+		background-color: #252527;
+		width: 100%;
+		height: 100vh;
+		width: 100vw;
+		justify-content: space-around;
+		align-items: center;
+	}
+	.navbar.active ul li a {
+		padding: 0;
+	}
+	.navbar .toggleBtn {
+		display: inline;
+	}
+
+	.navbar.active .logo,
+	.navbar.active .contactBtn {
+		display: none;
+	}
 }
