--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,33 +19,38 @@ body {
  * ----------------------------------------
  */
 @-webkit-keyframes slide-top {
-  0% {
-    -webkit-transform: translateY(100);
-            transform: translateY(100);
-  }
-  100% {
-    -webkit-transform: translateY(70px);
-            transform: translateY(70px);
-  }
-}
-@keyframes slide-top {
-  0% {
-    -webkit-transform: translateY(150);
-            transform: translateY(150px);
-  }
-  100% {
-    -webkit-transform: translateY(70px);
-            transform: translateY(70px);
-  }
-}
-.slide-top {
-	-webkit-animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-	        animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	0% {
+		-webkit-transform: translateY(100);
+		transform: translateY(100);
+	}
+
+	100% {
+		-webkit-transform: translateY(70px);
+		transform: translateY(70px);
+	}
 }
 
-.hidden{
+@keyframes slide-top {
+	0% {
+		-webkit-transform: translateY(150);
+		transform: translateY(150px);
+	}
+
+	100% {
+		-webkit-transform: translateY(70px);
+		transform: translateY(70px);
+	}
+}
+
+.slide-top {
+	-webkit-animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+.hidden {
 	display: none !important;
 }
+
 a {
 	color: inherit;
 	text-decoration: none;
@@ -66,7 +71,7 @@ a {
 	align-items: center;
 	height: 80px;
 	font-size: 16px;
-	font-weight: 4	00;
+	font-weight: 4 00;
 }
 
 .navbar ul {
@@ -93,6 +98,7 @@ a {
 .navbar ul :nth-child(1) {
 	margin-left: 30px;
 }
+
 .navbar .toggleBtn {
 	display: none;
 }
@@ -100,11 +106,14 @@ a {
 .toggleBtn {
 	font-size: 21px;
 }
+
 @media (max-width: 900px) {
+
 	.navbar ul,
 	.navbar .contactBtn {
 		display: none;
 	}
+
 	.navbar.active {
 		padding-top: 2em;
 		display: flex;
@@ -116,6 +125,7 @@ a {
 		position: fixed;
 		z-index: 1;
 	}
+
 	.navbar.active ul {
 		display: flex;
 		flex-flow: column;
@@ -126,9 +136,11 @@ a {
 		justify-content: space-around;
 		align-items: center;
 	}
+
 	.navbar.active ul li a {
 		padding: 0;
 	}
+
 	.navbar .toggleBtn {
 		display: inline;
 	}
@@ -137,17 +149,19 @@ a {
 	.navbar.active .contactBtn {
 		display: none;
 	}
+
 	.heroSection {
 		background-image: url("../assests/images/mobileHeroImage.png") !important;
 		background-position: bottom !important;
 		background-size: stretch !important;
 		background-repeat: none !important;
 	}
+
 	.listings {
 		padding: 2em;
 		gap: 2em;
 		display: grid;
-		grid-template-columns: auto auto !important	;
+		grid-template-columns: auto auto !important;
 	}
 }
 
@@ -198,6 +212,7 @@ a {
 	border-radius: 7px;
 	background-color: white;
 }
+
 .contact h2 {
 	margin-bottom: 1em;
 	text-align: center;
@@ -213,6 +228,7 @@ textarea {
 	border: #252527 solid 1px;
 	border-radius: 7px;
 }
+
 .contactForm label {
 	font-size: 1.3rem;
 }
@@ -227,6 +243,7 @@ textarea {
 	font-weight: 600;
 	font-size: 18px;
 }
+
 .contactForm button:hover {
 	transition: all 0.2s;
 	background-color: gold;
@@ -248,6 +265,7 @@ textarea {
 	width: 300px;
 	margin: 2em;
 }
+
 .reviews {
 	display: flex;
 	justify-content: space-around !important;
@@ -260,9 +278,11 @@ textarea {
 	font-size: 20px;
 	margin-bottom: 1em;
 }
+
 .reviewText {
 	margin-bottom: 1em;
 }
+
 .reviewName {
 	font-weight: 600;
 	font-size: 21px;
@@ -287,96 +307,146 @@ textarea {
 	align-items: center;
 }
 
-.meetSharonSection{
-	display:flex;
+.meetSharonSection {
+	display: flex;
 	width: 100%;
 	justify-content: center;
 }
 
 .meetSharonSection .left {
-	width:500px;
-}
-.meetSharonSection .right {
-	width:500px;
+	width: 500px;
 }
 
-.searchHomePage form{
-	display:flex;
-	flex-flow:row wrap;
+.meetSharonSection .right {
+	width: 500px;
+}
+
+.searchHomePage form {
+	display: flex;
+	flex-flow: row wrap;
 	justify-content: center;
 	align-content: center;
-	padding:3em;
+	padding: 3em;
 }
 
 .searchHomePage input {
-	height:40px;
-	width:320px;
+	height: 40px;
+	width: 320px;
 }
 
 .searchHomePage button {
-	height:40px;
-	width:120px;
+	height: 40px;
+	width: 120px;
 }
-.searchHomePage form input, button{
+
+.searchHomePage form input,
+button {
 	background-color: white;
-	border: #efefef 1px solid ;
+	border: #efefef 1px solid;
 }
 
 .searchHomePage form button .search-description {
 	font-size: 10px;
-	color:rgb(170, 170, 170);
+	color: rgb(170, 170, 170);
 }
 
 .search-btn {
 	background-color: rgb(7, 170, 7);
-	color:white;
+	color: white;
 	font-size: 16px;
-	border:rgb(7, 170, 7) 1px solid
+	border: rgb(7, 170, 7) 1px solid
 }
 
 .search-btn:hover {
-	background-color: rgb(6, 152, 6);
-	border: rgb(6, 152, 6) 1px solid ;
+	background-color: rgb(4, 135, 4);
+	border: rgb(4, 135, 4) 1px solid;
+	transition: all 300ms;
 }
-.search-input{
+
+.search-input {
 	padding-left: 20px;
 }
 
-.search-input:focus-visible{
-	margin-right:2px;
+.search-input:focus-visible {
+	margin-right: 2px;
 }
 
-.dropdown{
+.dropdown {
 	border: #efefef 1px solid;
-	display:flex;
+	display: flex;
 	flex-direction: column;
 	position: absolute;
 	/* margin-top:140px; */
-	margin-left:-40px;
-	padding:0;
-	width:120px;
+	margin-left: -40px;
+	padding: 0;
+	width: 120px;
 	text-align: center;
 	box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.049);
+	overflow: scroll;
+	height: 100px;
 }
 
-.dropdown li{
+.dropdown li {
 	padding-top: 10px;
 	padding-bottom: 10px;
 	font-size: 14px;
 	list-style-type: none;
 }
-.dropdown li p{
+
+.dropdown li p {
 	height: 100%;
 	width: 100%;
 }
-ul #locationDropDown{
-	display:flex !important;
+
+ul #locationDropDown {
+	display: flex !important;
 }
 
-#minPrice{
-	margin-left:200px;
+#minPrice {
+	margin-left: 200px;
 }
 
-#maxPrice{
-	margin-left:440px;
+#maxPrice {
+	margin-left: 440px;
+}
+
+.dropdown li:hover {
+	background-color: #eaeaea;
+}
+
+@media (max-width: 950px) {
+	.searchHomePage form {
+		flex-direction: column;
+		width: 100%;
+	}
+
+	.searchHomePage form input,
+	.searchHomePage button {
+		width: 100% !important;
+	}
+
+	.searchHomePage form .dropdown {
+		position: relative;
+		top: -64px;
+		margin-bottom: 20px;
+		width: 100%;
+		left: 42px;
+	}
+
+	#maxPrice {
+		position: relative;
+		top: -64px;
+		margin-bottom: 20px;
+		width: 100%;
+		left: 0px !important;
+	}
+
+	#minPrice {
+		margin-left: 0;
+		position: relative;
+		top: -64px;
+		margin-bottom: 20px;
+		width: 100%;
+		left: -0px !important;
+	}
 }
